# SportLogger

./: .gitignore  CMakeLists.txt  LICENCE  README.md
src/: main.cpp
src/adapters/storage/: FileStorage.cpp  FileStorage.h
src/adapters/upload/: StravaUploader.cpp  StravaUploader.h
src/core/: Activity.cpp  Activity.h  ActivityManager.cpp  ActivityManager.h  ElevationData.cpp  ElevationData.h  GPSData.cpp  GPSData.h  HeartRateData.cpp  HeartRateData.h  TCXBuilder.cpp  TCXBuilder.h
src/interfaces/: IElevationSensor.h  IGPS.h  IHeartRateSensor.h  IStorage.h  IUploader.h
src/tests/mocks/: MockElevationSensor.h  MockGPS.h  MockHeartRateSensor.h  MockUploader.h
